# bq27427

./: .astylerc  .eil.yml  CMakeLists.txt  LICENSE  README.md  TEMPLATE_README.md  bq27427.c  idf_component.yml  template-component.c
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-docs.yml  build.yml  publish-esp-component.yml  publish-gh-pages.yml  validate-astyle.yml  validate-component.yml  validate-esp-component.yml
docs/: Makefile  README.md  conf.py  doxygen.conf  index.rst  requirements.txt
examples/example1/: CMakeLists.txt  README.md
examples/example1/main/: CMakeLists.txt  example1.c  idf_component.yml
examples/example2/: CMakeLists.txt  README.md
examples/example2/main/: CMakeLists.txt  example2.c  idf_component.yml
include/: bq27427.h  template-component.h
